--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.27",
     "gsap": "^3.12.2",
+    "locomotive-scroll": "^4.1.4",
     "split-type": "^0.3.4"
   }
 }
