--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.2",
     "split-type": "^0.3.4",
     "vite": "^4.5.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
